--- a/Basalt/Basalt.vcxproj.filters
+++ b/Basalt/Basalt.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClInclude Include="src\Basalt\Utility\String.h">
       <Filter>Basalt\Utility</Filter>
     </ClInclude>
+    <ClInclude Include="src\Basalt\Platform\WindowsMessageMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Basalt\Application.cpp">
@@ -33,5 +34,6 @@
     <ClCompile Include="src\Basalt\Log.cpp">
       <Filter>Basalt</Filter>
     </ClCompile>
+    <ClCompile Include="src\Basalt\Platform\WindowsMessageMap.cpp" />
   </ItemGroup>
 </Project>
