Pull windows creation into the Platform/Window class

--- a/Basalt/Basalt.vcxproj
+++ b/Basalt/Basalt.vcxproj
@@ -149,13 +149,16 @@
     <ClInclude Include="src\Basalt\Core.h" />
     <ClInclude Include="src\Basalt\EntryPoint.h" />
     <ClInclude Include="src\Basalt\Log.h" />
+    <ClInclude Include="src\Platform\WindowsIncludes.h" />
     <ClInclude Include="src\Basalt\Utility\String.h" />
-    <ClInclude Include="src\Basalt\Platform\WindowsMessageMap.h" />
+    <ClInclude Include="src\Platform\WindowsMessageMap.h" />
+    <ClInclude Include="src\Platform\Window.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Basalt\Application.cpp" />
     <ClCompile Include="src\Basalt\Log.cpp" />
-    <ClCompile Include="src\Basalt\Platform\WindowsMessageMap.cpp" />
+    <ClCompile Include="src\Platform\WindowsMessageMap.cpp" />
+    <ClCompile Include="src\Platform\Window.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
