--- a/Basalt/Basalt.vcxproj
+++ b/Basalt/Basalt.vcxproj
@@ -144,6 +144,7 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="src\Basalt\Exception.h" />
     <ClInclude Include="src\Basalt.h" />
     <ClInclude Include="src\Basalt\Application.h" />
     <ClInclude Include="src\Basalt\Core.h" />
@@ -155,6 +156,7 @@
     <ClInclude Include="src\Platform\Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Basalt\Exception.cpp" />
     <ClCompile Include="src\Basalt\Application.cpp" />
     <ClCompile Include="src\Basalt\Log.cpp" />
     <ClCompile Include="src\Platform\WindowsMessageMap.cpp" />
