--- a/Basalt/Basalt.vcxproj
+++ b/Basalt/Basalt.vcxproj
@@ -159,7 +159,7 @@
     <ClInclude Include="src\Basalt\Events\MouseEvent.h" />
     <ClInclude Include="src\Basalt\Events\WindowEvent.h" />
     <ClInclude Include="src\Basalt\Exception.h" />
-    <ClInclude Include="src\Basalt\Input.h" />
+    <ClInclude Include="src\Basalt\IInput.h" />
     <ClInclude Include="src\Basalt\Log.h" />
     <ClInclude Include="src\Basalt\Utility\String.h" />
     <ClInclude Include="src\Platform\Window.h" />
