Add in mouse messages and dispatch events

--- a/Basalt/Basalt.vcxproj
+++ b/Basalt/Basalt.vcxproj
@@ -150,7 +150,6 @@
     <ClInclude Include="src\BEpch.h" />
     <ClInclude Include="src\Basalt.h" />
     <ClInclude Include="src\Basalt\Application.h" />
-    <ClInclude Include="src\Basalt\Keycodes.h" />
     <ClInclude Include="src\Basalt\Core.h" />
     <ClInclude Include="src\Basalt\EntryPoint.h" />
     <ClInclude Include="src\Basalt\Events\ApplicationEvent.h" />
@@ -160,7 +159,9 @@
     <ClInclude Include="src\Basalt\Events\WindowEvent.h" />
     <ClInclude Include="src\Basalt\Exception.h" />
     <ClInclude Include="src\Basalt\IInput.h" />
+    <ClInclude Include="src\Basalt\Keycodes.h" />
     <ClInclude Include="src\Basalt\Log.h" />
+    <ClInclude Include="src\Basalt\MouseCodes.h" />
     <ClInclude Include="src\Basalt\Utility\String.h" />
     <ClInclude Include="src\Platform\Window.h" />
     <ClInclude Include="src\Platform\WindowsInput.h" />
