--- a/Basalt/Basalt.vcxproj.filters
+++ b/Basalt/Basalt.vcxproj.filters
@@ -20,9 +20,6 @@
     <ClInclude Include="src\Basalt\Application.h">
       <Filter>Basalt</Filter>
     </ClInclude>
-    <ClInclude Include="src\Basalt\Keycodes.h">
-      <Filter>Basalt</Filter>
-    </ClInclude>
     <ClInclude Include="src\Basalt\Core.h">
       <Filter>Basalt</Filter>
     </ClInclude>
@@ -50,7 +47,13 @@
     <ClInclude Include="src\Basalt\IInput.h">
       <Filter>Basalt</Filter>
     </ClInclude>
+    <ClInclude Include="src\Basalt\Keycodes.h">
+      <Filter>Basalt</Filter>
+    </ClInclude>
     <ClInclude Include="src\Basalt\Log.h">
+      <Filter>Basalt</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Basalt\MouseCodes.h">
       <Filter>Basalt</Filter>
     </ClInclude>
     <ClInclude Include="src\Basalt\Utility\String.h">
