Add glm as submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Basalt/vendor/spdlog"]
 	path = Basalt/vendor/spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "Basalt/vendor/glm"]
+	path = Basalt/vendor/glm
+	url = https://github.com/g-truc/glm
